--- a/PanoramicCameraPose/imgui.ini
+++ b/PanoramicCameraPose/imgui.ini
@@ -10,24 +10,24 @@ Collapsed=0
 
 [Window][Viewport 01]
 Pos=0,0
-Size=1024,1100
+Size=965,1100
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][Tool]
-Pos=1026,0
-Size=574,1100
+Pos=967,0
+Size=633,1100
 Collapsed=0
 DockId=0x00000002,0
 
 [Table][0x85933782,4]
 Column 0  Weight=0.7808
-Column 1  Weight=0.8379
-Column 2  Weight=0.8379
-Column 3  Weight=2.5043
+Column 1  Weight=0.8665
+Column 2  Weight=0.8760
+Column 3  Weight=2.4376
 
 [Docking][Data]
-DockSpace   ID=0xA1672E74 Window=0x4647B76E Pos=216,239 Size=1600,1100 Split=X
-  DockNode  ID=0x00000001 Parent=0xA1672E74 SizeRef=1024,1100 CentralNode=1 Selected=0xCDB04C0C
-  DockNode  ID=0x00000002 Parent=0xA1672E74 SizeRef=574,1100 Selected=0xC452E1DE
+DockSpace   ID=0xA1672E74 Window=0x4647B76E Pos=60,83 Size=1600,1100 Split=X Selected=0xCDB04C0C
+  DockNode  ID=0x00000001 Parent=0xA1672E74 SizeRef=1030,1100 CentralNode=1 Selected=0xCDB04C0C
+  DockNode  ID=0x00000002 Parent=0xA1672E74 SizeRef=633,1100 Selected=0xC452E1DE
 
