improve tooltip and add print: rotation axis and angle  / parse function for fetching Pose Ground Truth

--- a/PanoramicCameraPose/imgui.ini
+++ b/PanoramicCameraPose/imgui.ini
@@ -10,15 +10,21 @@ Collapsed=0
 
 [Window][Viewport 01]
 Pos=0,0
-Size=1005,1100
+Size=1002,1100
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][Tool]
-Pos=1007,0
-Size=593,1100
+Pos=1004,0
+Size=596,1100
 Collapsed=0
 DockId=0x00000002,0
+
+[Window][Test]
+ViewportPos=1771,140
+ViewportId=0x784DD132
+Size=1103,1160
+Collapsed=0
 
 [Table][0x85933782,4]
 Column 0  Weight=0.7808
@@ -27,7 +33,7 @@ Column 2  Weight=0.8760
 Column 3  Weight=2.4376
 
 [Docking][Data]
-DockSpace   ID=0xA1672E74 Window=0x4647B76E Pos=216,239 Size=1600,1100 Split=X Selected=0xCDB04C0C
-  DockNode  ID=0x00000001 Parent=0xA1672E74 SizeRef=1005,1100 CentralNode=1 Selected=0xCDB04C0C
-  DockNode  ID=0x00000002 Parent=0xA1672E74 SizeRef=593,1100 Selected=0xC452E1DE
+DockSpace   ID=0xA1672E74 Window=0x4647B76E Pos=320,332 Size=1600,1100 Split=X Selected=0xCDB04C0C
+  DockNode  ID=0x00000001 Parent=0xA1672E74 SizeRef=1002,1100 CentralNode=1 Selected=0xCDB04C0C
+  DockNode  ID=0x00000002 Parent=0xA1672E74 SizeRef=596,1100 Selected=0xC452E1DE
 
