--- a/PanoramicCameraPose/imgui.ini
+++ b/PanoramicCameraPose/imgui.ini
@@ -9,14 +9,12 @@ Size=400,400
 Collapsed=0
 
 [Window][Viewport 01]
-Pos=0,0
-Size=1002,1100
+Size=1041,1100
 Collapsed=0
-DockId=0x00000001,0
 
 [Window][Tool]
-Pos=1004,0
-Size=596,1100
+Pos=1067,0
+Size=533,1100
 Collapsed=0
 DockId=0x00000002,0
 
@@ -26,13 +24,37 @@ ViewportId=0x784DD132
 Size=1103,1160
 Collapsed=0
 
-[Table][0x85933782,3]
-Column 0  Weight=0.7766
-Column 1  Weight=1.4070
-Column 2  Weight=1.5075
+[Window][Dear ImGui Metrics/Debugger]
+ViewportPos=2304,437
+ViewportId=0x8FC55800
+Size=633,750
+Collapsed=0
+
+[Window][Viewport]
+Pos=0,0
+Size=1065,1100
+Collapsed=0
+DockId=0x00000001,0
+
+[Window][Viewpor3]
+Collapsed=0
+
+[Window][XXX]
+Collapsed=0
+
+[Window][Dear ImGui Demo]
+Pos=650,20
+Size=550,680
+Collapsed=0
+
+[Table][0x85933782,4]
+Column 0  Weight=0.8405
+Column 1  Weight=1.1240
+Column 2  Weight=1.4758
+Column 3  Weight=1.2510
 
 [Docking][Data]
-DockSpace   ID=0xA1672E74 Window=0x4647B76E Pos=86,109 Size=1600,1100 Split=X Selected=0xCDB04C0C
-  DockNode  ID=0x00000001 Parent=0xA1672E74 SizeRef=1002,1100 CentralNode=1 Selected=0xCDB04C0C
-  DockNode  ID=0x00000002 Parent=0xA1672E74 SizeRef=596,1100 Selected=0xC452E1DE
+DockSpace   ID=0xA1672E74 Window=0x4647B76E Pos=346,332 Size=1600,1100 Split=X
+  DockNode  ID=0x00000001 Parent=0xA1672E74 SizeRef=1065,1100 CentralNode=1 Selected=0x13926F0B
+  DockNode  ID=0x00000002 Parent=0xA1672E74 SizeRef=533,1100 Selected=0xC452E1DE
 
